site/css/main.css
body {
	padding-bottom: 15px;
}

#github-link {
	padding-top: 15px;
}

#jumbotron-subtitle .well {
	background: #A1A1A1;
	color: #545454;
	text-align: center;
	border-color: #070707;
	margin-top: -15px;
	margin-left: 5px;
	margin-right: 5px;
}

.group-title {
	margin: 0px;
}
.group-title-with-subtitle {
	margin-top: 0px;
}

/* Fix for Bootstrap <a> meddling */
.fix-bootstrap-link,
.fix-bootstrap-link:hover,
.fix-bootstrap-link:link,
.fix-bootstrap-link:active,
.fix-bootstrap-link:visited {
	color: #fff;
	text-decoration: none;
	outline: none;
}

.small-to-h2 {
	margin-top: -10px;
}

section {
	width: 420px;
	margin: 20px auto;
}



.button-spacing-right a {
	margin-right: 7px;
	height: 48px;
}

